# ail

./: .gitignore  CMakeLists.txt  README.md
ail32/: AIL32.C  AIL32.H  AIL32.INC  AIL32DOS.ASM  AIL32DRIVER.H  AIL32INTERNAL.H  AIL386.MAC  AILBASE.H  AILDLL.H  CMakeLists.txt  DLLLOADLX.C  DLLLOADW32.C
drivers/: CMakeLists.txt
drivers/dmasnd/: CMakeLists.txt  DMASND32.ASM
drivers/null/: CMakeLists.txt  null.c
drivers/xmidi/: CMakeLists.txt  XMIDI32.ASM
drivers/xmidi/roland401/: CMakeLists.txt  MPU40132.INC  MT3232.INC
drivers/xmidi/sb/: CMakeLists.txt  SBMIDI32.INC
drivers/xmidi/speaker/: CMakeLists.txt  SPKR32.INC
drivers/xmidi/yamaha/: CMakeLists.txt  YAMAHA32.INC
examples/: CMakeLists.txt  MIX32.C  STP32.C  VP32.C  XP32.C
